# ai_infra

./: .clangd  .gitignore  CMakeLists.txt  pyproject.toml
ai_infra_week1/: inference.cpp  requirements.txt  resnet_export.py
ai_infra_week2/: chat_template.jinja  download_model.py  run_benchmark.sh  run_curl  run_startvllm
operator/: CMakeLists.txt  main.cpp
